---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var w : real\nput 1 : w\n"
---
"w"@(FileId(1), 4..5) [ConstVar(Var, No)]: real
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 21..22): mismatched types
| note for (FileId(1), 21..22): this is of type `real`
| info: `real` is not an integer type
